--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1328,7 +1328,7 @@ button {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		margin-bottom: 10;
+		margin-bottom: 1em;
 		list-style: none;
 		padding-left: 0;
 		border: solid 1px #ffffff;
