--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -630,18 +630,18 @@ input[type="radio"] + label:before {
 	border: 0;
 	display: inline-block;
 	position: relative;
+	object-fit: contain;
 }
 
 	.image:before {
 		pointer-events: none;
-		background-image: url("../../images/overlay.png");
 		background-color: rgba(19, 21, 25, 0.5);
 		border-radius: 4px;
 		content: '';
 		display: block;
 		height: 100%;
 		left: 0;
-		opacity: 0.5;
+		opacity: 1;
 		position: absolute;
 		top: 0;
 		width: 100%;
@@ -686,6 +686,7 @@ input[type="radio"] + label:before {
 		display: block;
 		margin: 2.5rem 0;
 		width: 100%;
+		object-fit: contain;
 	}
 
 		.image.main img {
@@ -707,6 +708,20 @@ input[type="radio"] + label:before {
 		}
 
 	}
+
+/* Figure */
+figure {
+	display: block;
+	padding: auto;
+	margin: auto;
+	text-align: center;
+}
+
+/* Figure Caption */
+figcaption {
+	margin: auto;
+	text-align: center;
+}
 
 /* List */
 
@@ -1532,7 +1547,9 @@ button {
 		transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
 		padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
 		position: relative;
-		width: 40rem;
+
+		/* CHAGNE */
+		width: 75%;
 		max-width: 100%;
 		background-color: rgba(27, 31, 34, 0.85);
 		border-radius: 4px;
@@ -1627,7 +1644,7 @@ button {
 	#footer .copyright {
 		letter-spacing: 0.2rem;
 		font-size: 0.6rem;
-		opacity: 0.75;
+		opacity: 1;
 		margin-bottom: 0;
 		text-transform: uppercase;
 	}
