--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1548,8 +1548,8 @@ button {
 		padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
 		position: relative;
 
-		/* CHAGNE */
-		width: 75%;
+		/* CHANGE */
+		width: 100%;
 		max-width: 100%;
 		background-color: rgba(27, 31, 34, 0.85);
 		border-radius: 4px;
